@@ -1,3 +1,8 @@
+2006-04-18  David Reveman  <davidr@novell.com>
+
+	* fb/fbmmx.c (fbCompositeSrc_yv12x8888mmx): Translate U, V start
+	pointers correctly and set srcEnd correctly.
+
 2006-04-13  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/xglparse.c (xglProcessArgument, xglUseMsg):
